# tinylytics

./: .gitignore  meson.build
.cache/clangd/index/: db.c.490FB97374DD8152.idx  db.h.CB9DF003C73BB48F.idx  http.c.6D8EBFB77CA1577A.idx  http.h.7C4569B02E784265.idx  main.c.FF016C0F9CC33AE3.idx
.github/workflows/: main.yml
include/: db.h  http.h  ipc.h
js/: track.js
src/: db.c  http.c  ipc.c  main.c  meson.build
